Bug 416062. Test all faces for a given codepoint, not just the first one. r+sr=roc